src/test/deca/context/invalid/created/decl_int_eq_float.deca
{
int a = 0.5; //0.5 n'est pas un int

}